always scroll header-table programmatically, avoids misalignment w/ sitcky

--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -443,8 +443,14 @@ button {
   margin: 0;
 }
 
-.table-scroll {
+.acs-table {
   position: relative;
+  width: 100%;
+  overflow: hidden;
+
+  table {
+    margin-bottom: 0;
+  }
 }
 
 thead {
